[gd_scene load_steps=18 format=3 uid="uid://dr5afr87g3tec"]

[ext_resource type="Texture2D" uid="uid://dip7cbuv8c85a" path="res://barkley2/assets/b2_original/images/merged/s_door_wood01.png" id="1_vn24o"]
[ext_resource type="Script" path="res://barkley2/scenes/Objects/_doors/o_door_tech_01.gd" id="2_xa4na"]
[ext_resource type="Theme" uid="uid://dgl808q5lpydb" path="res://barkley2/themes/main.tres" id="3_2q8x2"]

[sub_resource type="AtlasTexture" id="AtlasTexture_adeji"]
atlas = ExtResource("1_vn24o")
region = Rect2(192, 0, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8y03e"]
atlas = ExtResource("1_vn24o")
region = Rect2(144, 0, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7nt8t"]
atlas = ExtResource("1_vn24o")
region = Rect2(96, 0, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4oria"]
atlas = ExtResource("1_vn24o")
region = Rect2(48, 0, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rd71e"]
atlas = ExtResource("1_vn24o")
region = Rect2(0, 0, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5vrel"]
atlas = ExtResource("1_vn24o")
region = Rect2(0, 0, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5jgh6"]
atlas = ExtResource("1_vn24o")
region = Rect2(48, 0, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ig3mu"]
atlas = ExtResource("1_vn24o")
region = Rect2(96, 0, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3qwpc"]
atlas = ExtResource("1_vn24o")
region = Rect2(144, 0, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gf4s1"]
atlas = ExtResource("1_vn24o")
region = Rect2(192, 0, 48, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_rjstm"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_adeji")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8y03e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7nt8t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4oria")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rd71e")
}],
"loop": false,
"name": &"door_close",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5vrel")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5jgh6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ig3mu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3qwpc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gf4s1")
}],
"loop": false,
"name": &"door_open",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1dp3k"]
size = Vector2(49, 19)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_at0fl"]
size = Vector2(80, 45)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4q0mk"]
bg_color = Color(0, 0, 0, 0.5)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
anti_aliasing = false

[node name="o_door_wood01" type="AnimatedSprite2D" node_paths=PackedStringArray("door_block", "door_sensor", "sound_emiter")]
z_index = -5
sprite_frames = SubResource("SpriteFrames_rjstm")
animation = &"door_close"
centered = false
offset = Vector2(0, -63)
script = ExtResource("2_xa4na")
door_block = NodePath("door_block")
door_sensor = NodePath("door_sensor")
sound_emiter = NodePath("AudioStreamPlayer2D")
sfx_open = "door_open_wood"
sfx_close = "door_close_wood"

[node name="door_block" type="StaticBody2D" parent="."]

[node name="block_shape" type="CollisionShape2D" parent="door_block"]
position = Vector2(24.5, -9.5)
shape = SubResource("RectangleShape2D_1dp3k")

[node name="door_sensor" type="Area2D" parent="."]

[node name="sensor_shape" type="CollisionShape2D" parent="door_sensor"]
position = Vector2(24.5, -9.5)
shape = SubResource("RectangleShape2D_at0fl")

[node name="locked_panel" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(72, 16)
offset_left = -12.0
offset_top = -36.0
offset_right = 60.0
offset_bottom = -20.0
theme = ExtResource("3_2q8x2")
theme_override_styles/panel = SubResource("StyleBoxFlat_4q0mk")

[node name="MarginContainer" type="MarginContainer" parent="locked_panel"]
layout_mode = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="locked_text" type="Label" parent="locked_panel/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Locked"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
